# oxy

./: .clinerules  .cursorrules  .deepsource.toml  .dockerignore  .env.example  .gitignore  .lintstagedrc.cjs  .lintstagedrc.js  .lycheeignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .release-please-manifest.json  .remarkignore  .remarkrc.js  .taurignore  .tool-versions  .trivyignore.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.demo  Dockerfile.prebuilt  Dockerfile.simple  LICENSE.enterprise.md  MIGRATE_FROM_SQLITE_TO_POSTGRES.md  Makefile  README.demo.md  README.md  agents  agents.md  backend-architecture.md  biome.json  build.rs  buildspec.yml  cliff.toml  (+40 more)
crates/a2a/: CHANGELOG.md  Cargo.toml
crates/a2a/src/: error.rs  http.rs  jsonrpc.rs  lib.rs  server.rs  storage.rs  streaming.rs  types.rs  validation.rs
crates/agent/: CHANGELOG.md  Cargo.toml
crates/agent/src/: agent_launcher.rs  contexts.rs  databases.rs  lib.rs  mod.rs  references.rs  tool_executor.rs  types.rs
crates/airform/: Cargo.toml
crates/airform/src/: adapter.rs  config.rs  error.rs  lib.rs  service.rs  tool.rs  types.rs
crates/airhouse/: Cargo.toml
crates/airhouse/src/: config.rs  credentials.rs  lib.rs  local_seed.rs  provisioner.rs  user_provisioner.rs
crates/app/: CHANGELOG.md  Cargo.toml  build.rs  config.yml  demo_project
crates/app/src/: lib.rs  main.rs  observability_boot.rs  observability_setup.rs
crates/app/tests/: airhouse_lifecycle.rs  airhouse_provisioner.rs  airhouse_user_provisioner.rs  build.rs  local_mode_router.rs  run.rs  slack_app_home.rs  slack_cross_org_collision.rs  slack_oauth_install.rs  slack_oauth_state.rs  slack_resolution.rs  slack_uninstall.rs  slack_user_links.rs  slack_webhook_events.rs  test.rs  thread_role_guards.rs  workspace_details_fields.rs
crates/auth/: CHANGELOG.md  Cargo.toml
crates/auth/src/: api_key_domain.rs  api_key_infra.rs  authenticator.rs  built_in.rs  constants.rs  extractor.rs  lib.rs  middleware.rs  mod.rs  types.rs  types_tests.rs  user.rs
crates/billing/: Cargo.toml
crates/billing/src/: client.rs  config.rs  errors.rs  lib.rs  state.rs  webhook.rs
crates/core/: CHANGELOG.md  Cargo.toml  build.rs
crates/core/demo_project/: .gitignore  builder.agent.yml  config.yml  default.agent.yml  example_duckdb_query.sql  insights.app.yml
crates/core/src/: api_types.rs  connector.rs  constants.rs  errors.rs  lib.rs  main.rs  package.json  project.rs  python_interop.rs  readonly.rs  render.rs  sentry_config.rs  state_dir.rs  theme.rs  types.rs  utils.rs
crates/core/tests/: config_parsing.rs  omni_query_workflow.rs  prepare_semantic_engine.rs  run.rs  semantic_variables.rs  serve.rs  strict_validation.rs  sync.rs  validation.rs
crates/entity/: CHANGELOG.md  Cargo.toml
crates/entity/src/: a2a_artifacts.rs  a2a_messages.rs  a2a_task_status.rs  a2a_tasks.rs  apalis_jobs.rs  api_keys.rs  artifacts.rs  branches.rs  checkpoints.rs  conversations.rs  feature_flag.rs  git_namespaces.rs  github_accounts.rs  lib.rs  logs.rs  messages.rs  mod.rs  org_billing.rs  org_invitations.rs  org_invitations_tests.rs  org_members.rs  org_members_tests.rs  org_secrets.rs  organization_users.rs  organizations.rs  prelude.rs  project_repos.rs  projects.rs  run_sequences.rs  runs.rs  secrets.rs  settings.rs  slack_channel_bindings.rs  slack_channel_defaults.rs  slack_conversation_contexts.rs  slack_installations.rs  slack_oauth_states.rs  slack_seen_events.rs  slack_threads.rs  slack_user_identities.rs  (+16 more)
crates/git/: Cargo.toml
crates/git/src/: client.rs  lib.rs  types.rs
crates/globals/: CHANGELOG.md  Cargo.toml
crates/globals/src/: errors.rs  inheritance.rs  lib.rs  parser.rs  reference.rs  registry.rs  template.rs  validator.rs
crates/migration/: CHANGELOG.md  Cargo.toml  README.md
crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241112_035850_add_message.rs  m20250307_090813_add_threads.rs  m20250318_230139_add_thread_references.rs  m20250501_215840_add_tasks.rs  m20250519_011103_add_workflow_to_threads.rs  m20250522_011451_drop_messages_and_conversations.rs  m20250523_123859_add_users_table.rs  m20250523_123900_add_user_id_to_threads.rs  m20250527_005652_create_table_messages.rs  m20250609_000001_create_api_keys_table.rs  m20250609_015141_Add_artifacts.rs  m20250611_015638_add_tokens_to_messages.rs  m20250613_090405_add_auth_fields_to_users.rs  m20250618_102934_create_github_config_table.rs  m20250624_100000_add_role_to_users.rs  m20250625_000001_add_status_to_users.rs  m20250625_151048_add_is_processing_to_thread.rs  m20250626_000001_create_secrets_table.rs  m20250708_021201_create_logs_table.rs  m20250727_150336_add_run_model.rs  m20250811_084647_add_organizations_table.rs  (+68 more)
crates/observability/: Cargo.toml
crates/omni/: CHANGELOG.md  Cargo.toml
crates/onyx-core/: CHANGELOG.md  Cargo.toml  dist  sample_project
crates/onyx-desktop/: .gitignore  CHANGELOG.md  Cargo.toml  tauri.conf.json
crates/onyx-py/: CHANGELOG.md  Cargo.toml  onyx_py.pyi
crates/platform/: Cargo.toml
crates/project/: CHANGELOG.md  Cargo.toml
crates/py/: CHANGELOG.md  Cargo.toml  pyproject.toml
crates/semantic/: CHANGELOG.md  Cargo.toml
crates/shared/: CHANGELOG.md  Cargo.toml
crates/test-utils/: CHANGELOG.md  Cargo.toml
crates/thread/: CHANGELOG.md  Cargo.toml
onyx-py/: Cargo.toml  onyx_py.pyi  pyproject.toml
web-app/: .env.example  .gitignore  .prettierrc.cjs  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  components.json  eslint.config.js  index.html  lib.rs  package.json  panda.config.ts  playwright.config.ts  pnpm-lock.yaml  postcss.config.cjs  postcss.config.js  pyproject.toml  skills-lock.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
web-app/src/: App.tsx  ServeApp.tsx  index.css  main.tsx  sentry.ts  tauri.d.ts
web-app/src-tauri/: Cargo.toml  tauri.conf.json
web-app/tests/: global-setup.ts
web-app/types/: react-markdown.d.ts
(+4059 files in other folders)
