[workspace]
# TODO: switch back to default-members = ["crates/*"] once we migrated from release-please
members = [
  "crates/a2a",
  "crates/agent",
  "crates/app",
  "crates/auth",
  "crates/core",
  "crates/entity",
  "crates/globals",
  "crates/integration/looker",
  "crates/migration",
  "crates/omni",
  "crates/project",
  "crates/semantic",
  "crates/shared",
  "crates/test-utils",
  "crates/thread",
  "crates/workflow",
  "crates/infrastructure/llm/anthropic",
  "crates/infrastructure/llm/ollama",
  "crates/infrastructure/llm/gemini",
  "crates/infrastructure/llm/openai",
  "crates/infrastructure/llm/oxy-llm",
  "crates/agentic/analytics",
  "crates/agentic/core",
  "crates/agentic/llm",
  "crates/agentic/db",
  "crates/agentic/connector",
  "crates/agentic/http",
  "crates/agentic/workflow",
]

default-members = ["crates/app"]
resolver = "2"

[workspace.dependencies]
async-openai = {version = "0.34.0"}
axum = {version = "0.8.8", features = ["macros", "http2"]}
axum-server = {version = "0.8.0", features = ["tls-rustls"]}
chrono = "*"
indexmap = {version = "2.13.0", features = ["serde"]}
log = {version = "0.4"}
minijinja = {version = "2.17.1"}
regex = {version = "1.12.3"}
sea-orm = {version = "1.1.19", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
]}
sea-orm-migration = {version = "1.1.19", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "with-uuid",
]}
sentry = {version = "0.47.0", features = ["tower-axum-matched-path", "rustls", "tracing"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0.149"}
serde_yaml = {version = "0.9.34"}
tempfile = {version = "3.27.0"}
thiserror = {version = "2.0.18"}
tokio = {version = "1.50", features = ["full"]}
tracing = {version = "0.1.44"}
uuid = { version = "1.22", features = ["serde", "v4"] }

[workspace.package]
# TODO: turn this on when https://github.com/googleapis/release-please/issues number 2111 is fixed
# version = "0.1.32"
authors = ["oxy engineers"]
description = "Oxy"
documentation = "https://oxy.tech/docs"
edition = "2024"
exclude = ["examples/"]
publish = false
rust-version = "1.94.0"

[profile.dev.package]
# Disable optimization for native build dependencies to speed up dev builds
# These crates have build scripts that compile native code and always trigger rebuilds
aws-lc-sys = {opt-level = 0}
libduckdb-sys = {opt-level = 0}
lz4-sys = {opt-level = 0}
lzma-sys = {opt-level = 0}
onig_sys = {opt-level = 0}
openssl-sys = {opt-level = 0}
ring = {opt-level = 0}
# Large/complex crates that benefit from reduced optimization in dev
aws-sdk-sts = {opt-level = 0}
datafusion-common = {opt-level = 0}
parquet = {opt-level = 0}
sqlx-postgres = {opt-level = 0}

[profile.ci]
debug = false # reduces compilation time and resource usage by omitting debug symbols.
inherits = "dev"
strip = true # reduces memory usage during linking
