[workspace]
members = [
  "crates/a2a",
  "crates/agent",
  "crates/app",
  "crates/auth",
  "crates/core",
  "crates/entity",
  "crates/globals",
  "crates/integration/looker",
  "crates/migration",
  "crates/omni",
  "crates/project",
  "crates/semantic",
  "crates/shared",
  "crates/test-utils",
  "crates/thread",
  "crates/workflow",
  "crates/infrastructure/llm/anthropic",
  "crates/infrastructure/llm/ollama",
  "crates/infrastructure/llm/gemini",
  "crates/infrastructure/llm/openai",
  "crates/infrastructure/llm/oxy-llm",
  "crates/agentic/analytics",
  "crates/agentic/builder",
  "crates/agentic/core",
  "crates/agentic/llm",
  "crates/agentic/db",
  "crates/agentic/connector",
  "crates/agentic/http",
  "crates/agentic/workflow",
  "web-app",
]

default-members = ["crates/app"]
resolver = "2"

[workspace.dependencies]
# Internal workspace crates
a2a = { path = "crates/a2a" }
agentic-analytics = { path = "crates/agentic/analytics" }
agentic-builder = { path = "crates/agentic/builder" }
agentic-connector = { path = "crates/agentic/connector" }
agentic-core = { path = "crates/agentic/core" }
agentic-db = { path = "crates/agentic/db" }
agentic-http = { path = "crates/agentic/http" }
agentic-llm = { path = "crates/agentic/llm" }
agentic-workflow = { path = "crates/agentic/workflow" }
entity = { path = "crates/entity" }
migration = { path = "crates/migration" }
omni = { path = "crates/omni" }
oxy = { path = "crates/core" }
oxy-agent = { path = "crates/agent" }
oxy-anthropic = { path = "crates/infrastructure/llm/anthropic" }
oxy-auth = { path = "crates/auth" }
oxy-gemini = { path = "crates/infrastructure/llm/gemini" }
oxy-llm = { path = "crates/infrastructure/llm/oxy-llm" }
oxy-looker = { path = "crates/integration/looker" }
oxy-ollama = { path = "crates/infrastructure/llm/ollama" }
oxy-openai = { path = "crates/infrastructure/llm/openai" }
oxy-project = { path = "crates/project" }
oxy-semantic = { path = "crates/semantic" }
oxy-shared = { path = "crates/shared" }
oxy-test-utils = { path = "crates/test-utils" }
oxy-thread = { path = "crates/thread" }
oxy-workflow = { path = "crates/workflow" }
oxy_globals = { path = "crates/globals" }

# External dependencies
async-openai = {version = "0.33.1"}
duckdb = { version = "=1.10501.0", features = ["bundled"] }
axum = {version = "0.8.8", features = ["macros", "http2"]}
axum-server = {version = "0.8.0", features = ["tls-rustls"]}
chrono = "*"
indexmap = {version = "2.14.0", features = ["serde"]}
log = {version = "0.4"}
minijinja = {version = "2.19.0"}
regex = {version = "1.12.3"}
sea-orm = {version = "1.1.19", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
]}
sea-orm-migration = {version = "1.1.20", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "with-uuid",
]}
sentry = {version = "0.46.2", features = ["tower-axum-matched-path", "rustls", "tracing"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0.149"}
serde_yaml = {version = "0.9.34"}
sqlparser = {version = "0.37"}
tempfile = {version = "3.27.0"}
thiserror = {version = "2.0.18"}
tokio = {version = "1.51", features = ["full"]}
tracing = {version = "0.1.44"}
uuid = { version = "1.22", features = ["serde", "v4"] }
aes-gcm = "0.10.3"
aho-corasick = "1.1"
airlayer = { git = "https://github.com/oxy-hq/airlayer.git", tag = "v0.0.9" }
anyhow = "1.0.102"
apalis = "0.7.4"
apalis-core = "0.7.4"
apalis-sql = "0.7.4"
argon2 = "0.5"
arrow = { version = "=56.2.0", default-features = false }
assert_cmd = "2.2.0"
async-std = "1.13.2"
async-stream = "0.3.6"
async-trait = "0.1.89"
aws-config = "1"
aws-sdk-sesv2 = "1"
backoff = "0.4.0"
base64 = "0.22"
bcrypt = "0.17.1"
bollard = "0.20.2"
chrono-english = "0.1.8"
clap = "4.6.0"
clickhouse = "0.13.3"
colored = "3.1.1"
connectorx = "0.4.5"
constant_time_eq = "0.4.2"
csv = "1.4.0"
dashmap = "5"
deser-incomplete = "0.1.2"
df-interchange = "0.3.3"
dirs = "6.0.0"
dotenv = "0.15.0"
email_address = "0.2.9"
enum_dispatch = "0.3.13"
fehler = "1.0.0"
futures = "0.3.32"
futures-core = "0.3"
fxhash = "0.2.1"
garde = "0.22.1"
gcp-bigquery-client = "0.25.1"
git2 = "0.20.4"
glob = "0.3.3"
governor = "0.10"
handlebars = "6"
headless_chrome = "1.0"
hex = "0.4.3"
hmac = "0.12.1"
home = "0.5"
http = "1.4"
human-panic = "2.0.8"
humantime = "2.3.0"
include_dir = "0.7"
indicatif = "0.17"
indoc = "2.0.7"
itertools = "0.14.0"
jsonschema = "0.33.0"
jsonwebtoken = "10"
lancedb = "0.23.1"
lazy_static = "1.5.0"
lettre = "0.11.21"
libc = "0.2"
linfa = "0.8.1"
linfa-reduction = "0.8.1"
ndarray = "0.16.1"
once_cell = "1.21.4"
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
opentelemetry_sdk = "0.27"
parquet = "=56.2.0"
predicates = "3.1.4"
pulldown-cmark = "0.13"
rand = "0.8"
rapidfuzz = "0.5.0"
reqwest = { version = "*", features = ["rustls-tls"]  }
rkyv = "0.7.46"
rmcp = "0.8.5"
rusqlite = "0.32"
rustc_version_runtime = "0.3.0"
rustls = "0.23.38"
schemars = "0.8.22"
scopeguard = "1.2.0"
secrecy = "0.10.3"
self_update = "0.42.0"
semver = "1.0"
serde_arrow = "0.13.7"
serde_urlencoded = "0.7"
serde_with = "3.18.0"
serial_test = "3.4.0"
sha2 = "0.10.9"
short-uuid = "0.2.1"
slugify = "0.1.0"
snowflake-api = { git = "https://github.com/oxy-hq/snowflake-rs.git", tag = "v0.13.0-browser-auth" }
sqlformat = { git = "https://github.com/shssoichiro/sqlformat-rs.git", rev = "80255c7" }
sqlx = "0.8"
statrs = "0.17"
strip-ansi-escapes = "=0.2.1"
strsim = "0.11"
syntect = "5.3"
tabled = "0.20.0"
terminal-light = "1.8.0"
terminal_size = "0.4.4"
tokio-postgres = "0.7"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tower = "0.5.3"
tower-http = "0.6.8"
tower-serve-static = "0.1.1"
tqdm = "0.7.0"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.28"
tracing-subscriber = "0.3.23"
url = "2.5.8"
urlencoding = "2.1.3"
utoipa = { git = "https://github.com/haitrr/utoipa.git", rev = "776f86e" }
utoipa-axum = { git = "https://github.com/haitrr/utoipa.git", rev = "776f86e" }
utoipa-swagger-ui = { git = "https://github.com/haitrr/utoipa.git", rev = "776f86e" }
wildcard = "0.3.0"
wiremock = "0.6"
xxhash-rust = "0.8"

[workspace.package]
version = "0.5.35"
authors = ["oxy engineers"]
description = "Oxy"
documentation = "https://oxy.tech/docs"
edition = "2024"
exclude = ["examples/"]
publish = false
rust-version = "1.94.0"

[profile.dev.package]
# Disable optimization for native build dependencies to speed up dev builds
# These crates have build scripts that compile native code and always trigger rebuilds
aws-lc-sys = {opt-level = 0}
libduckdb-sys = {opt-level = 0}
lz4-sys = {opt-level = 0}
lzma-sys = {opt-level = 0}
onig_sys = {opt-level = 0}
openssl-sys = {opt-level = 0}
ring = {opt-level = 0}
# Large/complex crates that benefit from reduced optimization in dev
aws-sdk-sts = {opt-level = 0}
datafusion-common = {opt-level = 0}
parquet = {opt-level = 0}
sqlx-postgres = {opt-level = 0}

[profile.ci]
debug = false # reduces compilation time and resource usage by omitting debug symbols.
inherits = "dev"
strip = true # reduces memory usage during linking
