[tool.poetry]
name = "onyx"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.group.main.dependencies]
python = ">=3.11,<3.12"

# required for dependabot
[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.chat.dependencies]
onyx-chat = { path = "onyx/chat", develop = true }

[tool.poetry.group.ai.dependencies]
onyx-ai = { path = "onyx/ai", develop = true }

[tool.poetry.group.catalog.dependencies]
onyx-catalog = { path = "onyx/catalog", develop = true }

[tool.poetry.group.shared.dependencies]
onyx-shared = { path = "onyx/shared", develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
pytest = "^7.4.4"
pytest-asyncio = "0.23.5.post1"
grpcio-tools = "^1.64.1"
ruff-lsp = "^0.0.45"
jupyterlab = "^4.1.5"
matplotlib = "^3.8.4"
import-linter = "^2.0"

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.2"
coverage = "^7.4.4"
hypothesis = { version = "^6.100.0", extras = ["cli"] }
faiss-cpu = "^1.8.0"

[tool.ruff]
extend-exclude = ["*_pb2*.py*"]
force-exclude = true
line-length = 120
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
# On top of the default `select` (`E4`, E7`, `E9`, and `F`), enable flake8-bugbear (`B`) and flake8-quotes (`Q`).
extend-select = [
  "Q",
  "I",
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
  "W191", # indentation contains tabs
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.coverage.report]
ignore_errors = true
exclude_also = [
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
