[package]
name = "onyx-py"
version = "0.1.31"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "onyx_py"
crate-type = ["cdylib"]

[dependencies]
onyx = { path = "../" }
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
pyo3-build-config = "=0.23.3"


[dependencies.pyo3]
version = "=0.23.3"
features = ["experimental-async"]
