[package]
name = "a2a"
version = "0.4.3"
authors.workspace = true
description.workspace = true
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.19", features = ["serde", "v4"] }
async-trait = "0.1"
futures = "0.3"
http = "1.4"
axum = { version = "0.8.8", features = ["json"] }
tokio = { workspace = true, features = ["rt"] }
tower = "0.5"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
