[package]
name = "a2a"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
axum = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["rt"] }
tower = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
