[package]
name = "oxy-agent"
version.workspace = true
authors.workspace = true
description = "Agent execution engine for Oxy"
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = "0.1.89"
futures = "0.3.32"
async-stream = "0.3.6"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
deser-incomplete = "0.1.2"

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Logging
tracing = { workspace = true }
log = { workspace = true }

# LLM integration
async-openai = { workspace = true, features = [
    "byot",
    "chat-completion-types",
    "response-types",
] }

# Utilities
chrono = { workspace = true }
indexmap = { workspace = true }
itertools = "0.14.0"
arrow = { version = "=56.2.0", default-features = false, features = ["json"] }
backoff = { version = "0.4", features = ["tokio"] }
uuid = { workspace = true }
schemars = { version = "0.8.22", features = ["derive", "impl_json_schema"] }
minijinja = { workspace = true, features = ["loader"] }
tokio-stream = "0.1.18"
slugify = "0.1.0"
short-uuid = "0.2.1"

# Database
sea-orm = { workspace = true }
entity = { workspace = true }

# Shared infrastructure
oxy-shared = { workspace = true }
oxy-semantic = { workspace = true }
oxy-openai = { workspace = true }
# oxy-config = { path = "../config" }  # Access via oxy::config instead
oxy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
