[package]
name = "oxy-agent"
version.workspace = true
authors.workspace = true
description = "Agent execution engine for Oxy"
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
deser-incomplete = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
log = { workspace = true }

# LLM integration
async-openai = { workspace = true, features = [
    "byot",
    "chat-completion-types",
    "response-types",
] }

# Utilities
chrono = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
arrow = { workspace = true, features = ["json"] }
backoff = { workspace = true, features = ["tokio"] }
uuid = { workspace = true }
schemars = { workspace = true, features = ["derive", "impl_json_schema"] }
minijinja = { workspace = true, features = ["loader"] }
tokio-stream = { workspace = true }
slugify = { workspace = true }
short-uuid = { workspace = true }

# Database
sea-orm = { workspace = true }
entity = { workspace = true }

# Shared infrastructure
oxy-shared = { workspace = true }
oxy-semantic = { workspace = true }
oxy-openai = { workspace = true }
# oxy-config = { path = "../config" }  # Access via oxy::config instead
oxy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
reqwest = { workspace = true }
