[package]
name = "airhouse"
description = "Airhouse integration: pgwire connector + admin client + tenant/user provisioners + REST"
version.workspace = true
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[features]
default = []
# Pgwire connector (DuckDB dialect over Postgres wire protocol). Pulls in only
# the agentic-connector trait + tokio-postgres — NO platform deps. Safe for
# `agentic-pipeline` to depend on.
connector = [
    "dep:agentic-core",
    "dep:agentic-connector",
    "dep:tokio-postgres",
    "dep:async-stream",
    "dep:async-trait",
    "dep:serde_json",
    "dep:tokio",
    "dep:tracing",
]
# Minimal: the `airhouse_managed` credentials resolver, the airhouse-owned
# entity models (Sea-ORM `Serialize`/`Deserialize` derives → `serde`), and
# the airhouse migrator. Pulled in by `oxy` core to handle
# `DatabaseType::AirhouseManaged` in its legacy connector dispatch and to
# run airhouse migrations on startup.
credentials = [
    "dep:oxy-platform",
    "dep:oxy-shared",
    "dep:entity",
    "dep:sea-orm",
    "dep:sea-orm-migration",
    "dep:async-trait",
    "dep:serde",
    "dep:tokio",
    "dep:uuid",
    "dep:tracing",
]
# Tenant + user provisioners + admin HTTP client + env-driven config + local
# seeder. Implies `credentials`. Adds `oxy-auth` (used by `local_seed` for
# the `Identity` type).
admin = [
    "credentials",
    "dep:oxy-auth",
    "dep:reqwest",
    "dep:thiserror",
    "dep:base64",
    "dep:rand",
    "dep:chrono",
    "dep:serde",
    "dep:serde_json",
]
# Axum HTTP handlers for `/airhouse/me/*`. Always implies `admin`.
rest = ["admin", "dep:axum"]

[dependencies]
# Connector feature deps
agentic-core = { workspace = true, optional = true }
agentic-connector = { workspace = true, optional = true }
tokio-postgres = { workspace = true, optional = true, features = [
    "with-chrono-0_4",
    "with-serde_json-1",
] }
async-trait = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }

# Admin feature deps (platform-aware)
oxy-platform = { workspace = true, optional = true }
oxy-shared = { workspace = true, optional = true }
oxy-auth = { workspace = true, optional = true }
entity = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
sea-orm-migration = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
thiserror = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

# REST feature deps
axum = { workspace = true, optional = true }

# Shared by both connector and admin
tokio = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }
